--- a/server/package.json
+++ b/server/package.json
@@ -8,21 +8,28 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "openai": "^3.2.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.4.21",
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.4.21"
+    "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.12",
+    "@types/pdf-parse": "^1.1.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
 }
-
