--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "1.0.6",
     "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
