--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
     "@heroicons/vue": "1.0.6",
     "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^12.5.0",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
     "lucide-vue-next": "^0.474.0",
     "pinia": "^2.3.1",
     "tailwindcss": "^4.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0",
     "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
