--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,10 +8,11 @@
     "strict": true,
     "moduleResolution": "node",
     "baseUrl": ".",
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["src/*"]
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules/**/*"]
+  "exclude": ["node_modules"]
 }
